Update versions + Add Java 19 Layer